NIFI-14067 Replaced anonymous classes with lambdas.